<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page2"
    android:background="@color/backgroundColor"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewPageTwo1"
            android:textColor="@color/textColorMain"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pageTwoTextView2"
            android:textColor="@color/textColorMain"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pageTwoTextView3"
            android:textColor="@color/textColorMain"
            android:text="@string/textViewPageTwo2"
            android:textStyle="bold"
            android:textSize="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pageTwoTextView4"
            android:textColor="@color/textColorMain"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/buttonTemperature"
            android:background="@color/colorPrimary"
            android:text="@string/pageTwoButtonOne" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonSunRises"
            android:text="@string/pageTwoButtonTwo"
            android:background="@color/colorPrimary"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent"
            android:id="@+id/buttonWind"
            android:text="@string/pageTwoButtonThree"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/temperatureLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:src="@mipmap/sun_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/textColorMain"
                android:text="@string/dropDownListTextView"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/pageTwoSpinner" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColorMain"
                android:text="@string/temperatura"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/textColorMain"
                android:textSize="25sp"
                android:text="@string/dummyTemperatura"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColorMain"
                android:text="@string/pritisak"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/textColorMain"
                android:textSize="25sp"
                android:text="@string/dummyPritisak"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColorMain"
                android:text="@string/vlaznostVazduha"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/textColorMain"
                android:textSize="25sp"
                android:text="@string/dummyVlaznost"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/sunRisesSunSetLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColorMain"
                android:text="@string/sunRises"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/textColorMain"
                android:textSize="25sp"
                android:text="@string/dummySunRises"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColorMain"
                android:text="@string/Sunset"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/textColorMain"
                android:textSize="25sp"
                android:text="@string/dummySunSet"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/windLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColorMain"
                android:text="@string/wind"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/textColorMain"
                android:textSize="25sp"
                android:text="@string/dummyWindSpeed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColorMain"
                android:text="@string/windDirection"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:textColor="@color/textColorMain"
                android:textSize="25sp"
                android:text="@string/dummyWindDirection"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>